Update ZeroconfPrinterDetector.

Add flushing semantics consistent with (some) other device lister
users.  This involved relatively intrusive changes, because we have to
track *which* service a given entry came from, and, to be correct, we
have to keep overridden entries around in case the overriding entry
disappears.

Also add substantial unit tests, which are sort of hairy and
complicated.  Sorry.  For the hairiness.  Not the tests.  Mostly.

Bug: 761536
Change-Id: I694119edc85e8e4486b1b53e04dce643e95baaf5
Reviewed-on: https://chromium-review.googlesource.com/905474
Commit-Queue: Justin Carlson <justincarlson@chromium.org>
Reviewed-by: Sean Kau <skau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535729}
Former-commit-id: 8c6fd10001315b2192c4d536ea2e51d578b5e3b6